logs/djangohelpers.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/djangohelpers'...
Compiling './lib/python3.5/site-packages/djangohelpers/console_scripts.py'...
***   File "./lib/python3.5/site-packages/djangohelpers/console_scripts.py", line 49
    print subclass_templatetag(sys.argv[0], sys.argv[1], sys.argv[2:])
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangohelpers/templatetags'...
Compiling './lib/python3.5/site-packages/djangohelpers/templatetags/__init__.py'...
***   File "./lib/python3.5/site-packages/djangohelpers/templatetags/__init__.py", line 39
    raise template.TemplateSyntaxError, \
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/djangohelpers-0.19.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
